--- a/pom.xml
+++ b/pom.xml
@@ -78,6 +78,13 @@
             <version>47.0.0</version>
         </dependency>
 
+        <!-- Newer version of this is needed for thew Base64 Encoding -->
+        <dependency>
+            <groupId>commons-codec</groupId>
+            <artifactId>commons-codec</artifactId>
+            <version>1.4</version>
+        </dependency>
+
         <dependency>
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
